Resolves: tdf#94069 call setVisible when setDesignMode is called

void UnoControl::setDesignMode calls setVisible on the XWindow
so it seems sensible that FmXGridPeer::setDesignMode should
also do so. The desirable side effect is that moving the window
in design mode then is moving a un-shown window so nothing
is invalidated so the paint loop doesn't happen.

Change-Id: Ic5a4ba62590372bec15a29b993b73d6dfb94a8a9
(cherry picked from commit a7816853bad55ada597092c16ba9a0a761e067d0)